# site2docs

./: .env.example  .gitignore  AGENTS.md  README.en.md  README.md  codex_spec_static_doc_generation.md  pyproject.toml
site2docs/: README.md  pyproject.toml
site2docs/src/site2docs/: builder.py  cli.py  config.py  document.py  extraction.py  graphing.py  manifest.py  rendering.py
site2docs/tests/: test_extraction.py  test_graphing.py
src/site2docs/: __init__.py  builder.py  cli.py  config.py  document.py  env.py  extraction.py  graphing.py  manifest.py  quality.py  rendering.py
tests/: test_builder.py  test_cli.py  test_config.py  test_document.py  test_env.py  test_extraction.py  test_graphing.py  test_quality.py
